# openpista

./: .gitignore  CHANGELOG.md  COMMANDS.md  Cargo.toml  Cross.toml  Makefile  README.md  README_ko.md  ROADMAP.md  ROADMAP_ko.md  WHATSAPP.md  add_container_tests.py  codecov.yml  config.example.toml  fix_clippy.py  fix_collapsible.py  fix_rustls_provider.py  fix_test.py  fix_test2.py  fix_tools_test.py  flake.nix  install.sh  package-lock.json  refactor.py
.cargo/: audit.toml
.github/: labels.yml  release-drafter.yml
.github/workflows/: ci.yml  labels-sync.yml  release-drafter.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: anthropic.rs  approval.rs  lib.rs  llm.rs  memory.rs  responses.rs  runtime.rs  tool_registry.rs
crates/agent/src/provider/: anthropic.rs  mod.rs  openai.rs  responses.rs
crates/channels/: Cargo.toml
crates/channels/src/: adapter.rs  cli.rs  lib.rs  mobile.rs  telegram.rs  web.rs  whatsapp.rs
crates/channels/src/web/: handlers.rs  mod.rs  types.rs  websocket.rs
crates/channels/static/: app.js  index.html  style.css
crates/channels/tests/: web_adapter_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  auth_picker.rs  cmd_auth.rs  cmd_model.rs  cmd_telegram.rs  cmd_web.rs  cmd_whatsapp.rs  config.rs  daemon.rs  main.rs  model_catalog.rs  presets.rs  run_cmd.rs  startup.rs  test_support.rs
crates/cli/src/tui/: action.rs  app.rs  approval.rs  chat.rs  event.rs  home.rs  mod.rs  selection.rs  sidebar.rs  status.rs  theme.rs
crates/cli/src/tui/app/: input.rs  mod.rs  render.rs  state.rs
crates/cli/src/tui/event/: auth.rs  helpers.rs  mod.rs  slash.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  router.rs  scheduler.rs  server.rs  session.rs
crates/proto/: Cargo.toml
crates/proto/src/: approval.rs  error.rs  event.rs  lib.rs  message.rs  path.rs  tool.rs
crates/proto/tests/: worker_report_integration.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs  loader.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  browser.rs  container.rs  lib.rs  screen.rs  util.rs  wasm_runtime.rs
crates/tools/src/container/: docker.rs  lifecycle.rs  mod.rs  skill.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/web/src/: lib.rs
docs/: ARCHITECTURE_WORKER.md
docs/agent-orchestration/: README.md  architecture.md  policies.md  prompt-templates.md  routing-rules.md  runbook-fallback.md  two-week-rollout.md
docs/security/: advisories.md
migrations/: 001_init.sql  002_add_tool_calls_json.sql
quinn-test/: Cargo.toml
quinn-test/src/: main.rs
scripts/: build-web.sh
scripts/tests/: check-rustdocs-coverage.sh  check-test-coverage.sh
skills/: README.md
skills/hello-wasm/: Cargo.toml  SKILL.md
skills/hello-wasm/src/: lib.rs
use-channels/: README.md  cli.md  telegram.md  web.md  whatsapp.md
website/: index.html
website/assets/: style.css
whatsapp-bridge/: index.js  package-lock.json  package.json
