[workspace]
resolver = "3"
members = [
    "crates/proto",
    "crates/gateway",
    "crates/agent",
    "crates/tools",
    "crates/channels",
    "crates/skills",
    "crates/cli", "quinn-test",
]
exclude = [
    "skills/hello-wasm"
]

[workspace.dependencies]
# 비동기 런타임
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# QUIC / TLS
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
rcgen = "0.13"

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# LLM
async-openai = { version = "0.27", default-features = false, features = ["rustls"] }

# 데이터베이스
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 에러
thiserror = "2"
anyhow = "1"

# 유틸
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"

# 채널
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# 스케줄러
tokio-cron-scheduler = "0.10"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chromiumoxide = "0.8"
bollard = "0.19"
wasmtime = "38.0.4"
wasmtime-wasi = "38.0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tar = "0.4"
image = "0.24.9"
screenshots = "0.8"

# 내부 crate
proto = { path = "crates/proto" }
gateway = { path = "crates/gateway" }
agent = { path = "crates/agent" }
tools = { path = "crates/tools" }
channels = { path = "crates/channels" }
skills = { path = "crates/skills" }
