[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { workspace = true }
tools = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
async-openai = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
