[package]
name = "channels"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
teloxide = { workspace = true }
futures-util = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
