[package]
name = "channels"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
teloxide = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
