[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openpista"
path = "src/main.rs"

[dependencies]
proto = { workspace = true }
agent = { workspace = true }
tools = { workspace = true }
channels = { workspace = true }
skills = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = "1"
arboard = "3"
chrono = { workspace = true }
reqwest = { workspace = true }
unicode-width = "0.2"
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }


[dev-dependencies]
tempfile = "3"
