[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
screenshots = { workspace = true }
reqwest = { workspace = true }
chromiumoxide = { workspace = true }
futures-util = { workspace = true }
bollard = { workspace = true }

[dev-dependencies]
tempfile = "3"
