[package]
name = "openpista-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Event",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "Element",
    "Node",
    "NodeList",
    "Storage",
    "EventTarget",
    "BinaryType",
    "console",
    "DomTokenList",
] }
